--- a/Dicloud/Base.lproj/Main.storyboard
+++ b/Dicloud/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--HomeVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="balance" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="HomeVC" customModule="Dicloud" sceneMemberID="viewController">
+                <viewController restorationIdentifier="HomeVC" storyboardIdentifier="HomeVC" title="HomeVC" id="BYZ-38-t0r" customClass="HomeVC" customModule="Dicloud" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -101,6 +101,7 @@
                                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <connections>
                                                 <action selector="openMenu:" destination="BYZ-38-t0r" id="xLX-rK-HDL"/>
+                                                <segue destination="BYZ-38-t0r" kind="show" id="6n4-lH-wgY"/>
                                             </connections>
                                         </barButtonItem>
                                         <button key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="9RM-oc-xIj">
@@ -259,24 +260,24 @@
                                 <color key="separatorColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="sectionIndexBackgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="119" id="O8R-Gi-udG" customClass="DataUseCell" customModule="Dicloud" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="119"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="61" id="O8R-Gi-udG" customClass="DataUseCell" customModule="Dicloud" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="61"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="O8R-Gi-udG" id="Aih-yD-ZDF">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="118.66666666666667"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="60.666666666666664"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="em0-dH-Biz">
-                                                    <rect key="frame" x="34" y="11" width="326" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U8B-cI-4NK">
+                                                    <rect key="frame" x="30" y="22" width="326" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U8B-cI-4NK">
-                                                    <rect key="frame" x="34" y="57" width="326" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="em0-dH-Biz">
+                                                    <rect key="frame" x="30" y="4" width="326" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -296,9 +297,7 @@
                     </view>
                     <connections>
                         <outlet property="myTableView" destination="smQ-tb-kQu" id="VQa-Le-XTc"/>
-                        <segue destination="r2s-hr-t0g" kind="popover" identifier="DataFrequencySegue" id="PHw-WI-6y8">
-                            <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
-                        </segue>
+                        <segue destination="r2s-hr-t0g" kind="push" identifier="DataFrequencySegue" id="PHw-WI-6y8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3oP-Ii-Uzk" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -313,23 +312,48 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2QE-Bs-rgB">
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2QE-Bs-rgB">
                                 <rect key="frame" x="43" y="198" width="288" height="326"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lnA-Tg-FNS">
-                                        <rect key="frame" x="8" y="-20" width="280" height="375"/>
-                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <pickerView contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lnA-Tg-FNS">
+                                        <rect key="frame" x="-16" y="-23" width="316" height="363"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </pickerView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Frecuencia de sincronización" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fnx-Nm-WDi">
+                                        <rect key="frame" x="-2" y="27" width="293" height="47"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="47" id="kBE-NR-0Yu"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="lnA-Tg-FNS" secondAttribute="bottom" constant="-14" id="LI9-Bf-l59"/>
+                                    <constraint firstItem="fnx-Nm-WDi" firstAttribute="centerX" secondItem="2QE-Bs-rgB" secondAttribute="centerX" id="NaT-RR-7br"/>
+                                    <constraint firstItem="lnA-Tg-FNS" firstAttribute="top" secondItem="fnx-Nm-WDi" secondAttribute="bottom" constant="8" symbolic="YES" id="Rz2-gJ-4WC"/>
+                                    <constraint firstItem="lnA-Tg-FNS" firstAttribute="leading" secondItem="2QE-Bs-rgB" secondAttribute="leading" constant="-16" id="Sg6-1h-MN1"/>
+                                    <constraint firstAttribute="trailing" secondItem="lnA-Tg-FNS" secondAttribute="trailing" constant="-12" id="ce6-YO-FGI"/>
+                                    <constraint firstItem="fnx-Nm-WDi" firstAttribute="top" secondItem="2QE-Bs-rgB" secondAttribute="top" constant="27" id="sr3-xN-MaI"/>
+                                    <constraint firstItem="fnx-Nm-WDi" firstAttribute="leading" secondItem="2QE-Bs-rgB" secondAttribute="leading" constant="-2" id="yUT-fc-iFe"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="2QE-Bs-rgB" firstAttribute="leading" secondItem="Rb1-YJ-eEN" secondAttribute="leading" constant="43" id="RRj-dr-hKa"/>
+                            <constraint firstItem="2QE-Bs-rgB" firstAttribute="top" secondItem="Rb1-YJ-eEN" secondAttribute="top" constant="154" id="gZw-Lv-auO"/>
+                            <constraint firstItem="Rb1-YJ-eEN" firstAttribute="bottom" secondItem="2QE-Bs-rgB" secondAttribute="bottom" constant="254" id="rAz-dj-VVQ"/>
+                            <constraint firstItem="2QE-Bs-rgB" firstAttribute="centerX" secondItem="8dl-qW-jjo" secondAttribute="centerX" id="sEB-PU-8XU"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Rb1-YJ-eEN"/>
                     </view>
+                    <navigationItem key="navigationItem" id="YZd-dz-5r0"/>
                     <connections>
                         <outlet property="frequency" destination="lnA-Tg-FNS" id="Whi-D7-vfP"/>
+                        <segue destination="hts-k0-sEn" kind="show" identifier="DataUseVCSegue" animates="NO" id="Ogq-Tx-9xs"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gmo-iP-qyb" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -545,7 +569,8 @@
         <image name="icons8-phone-25.png" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="Ogq-Tx-9xs"/>
         <segue reference="tZU-ca-AIb"/>
-        <segue reference="Tgm-BY-a8V"/>
+        <segue reference="6n4-lH-wgY"/>
     </inferredMetricsTieBreakers>
 </document>
