Webview popup's are now handled

--- a/Dicloud/Base.lproj/Main.storyboard
+++ b/Dicloud/Base.lproj/Main.storyboard
@@ -571,6 +571,6 @@
     <inferredMetricsTieBreakers>
         <segue reference="Ogq-Tx-9xs"/>
         <segue reference="tZU-ca-AIb"/>
-        <segue reference="6n4-lH-wgY"/>
+        <segue reference="Tgm-BY-a8V"/>
     </inferredMetricsTieBreakers>
 </document>
